--- a/SandWish/src/main/webapp/WEB-INF/web.xml
+++ b/SandWish/src/main/webapp/WEB-INF/web.xml
@@ -41,5 +41,7 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
+<welcome-file-list>
+<welcome-file>home.jsp</welcome-file>
+</welcome-file-list>
 </web-app>
