spring jdbc pom描述修正

--- a/SandWish/pom.xml
+++ b/SandWish/pom.xml
@@ -136,7 +136,7 @@
 			<version>4.1.6.RELEASE</version>
 		</dependency>
 		<dependency>
-			<groupId>org.spring</groupId>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
