微信开发创建分支

--- a/SandWish/src/main/webapp/WEB-INF/web.xml
+++ b/SandWish/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,19 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	<!-- Processes Encoding -->
+	<filter>
+	<filter-name>Character Encoding</filter-name>
+	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+	<init-param>
+		<param-name>encoding</param-name>
+		<param-value>UTF-8</param-value>
+	</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>Character Encoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>  
 <welcome-file-list>
 <welcome-file>home.jsp</welcome-file>
 </welcome-file-list>
