--- a/SandWish/pom.xml
+++ b/SandWish/pom.xml
@@ -145,6 +145,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.35</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
